# emailclient-ng

./: CMakeLists.txt  readme.md
include/: base64.h  curlrequestscheduler.h  dbexception.h  dbmanager.h  mail.h  mailpart.h  mailsettings.h  periodicdatafetcher.h  utils.h
include/imap/: curlrequest.h  curlresponse.h  imapfetcher.h  imapmailparser.h  imaprequest.h  imaprequestinterface.h
include/qml_models/: foldermodel.h  mailmodel.h  modelfactory.h
qml/: AppHeader.qml  FolderListDelegate.qml  MailContent.qml  MailHeader.qml  MailList.qml  Main.qml
src/: base64.cpp  curlrequestscheduler.cpp  dbexception.cpp  dbmanager.cpp  mailsettings.cpp  main.cpp  periodicdatafetcher.cpp  utils.cpp
src/imap/: curlrequest.cpp  curlresponse.cpp  imapfetcher.cpp  imapmailparser.cpp  imaprequest.cpp
src/qml_models/: foldermodel.cpp  mailmodel.cpp  modelfactory.cpp
tests/: dev_tests.cpp
